; ModuleID = '/home/carl/AnghaBench/vlc/modules/control/extr_netsync.c_GetPcrSystem.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/control/extr_netsync.c_GetPcrSystem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @GetPcrSystem to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @GetPcrSystem(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = call i32 (...) @vlc_savecancel()
  store i32 %5, i32* %3, align 4
  %6 = load i32*, i32** %2, align 8
  %7 = call i64 @input_GetPcrSystem(i32* %6, i32* %4, i32* null)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i32 -1, i32* %4, align 4
  br label %10

10:                                               ; preds = %9, %1
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @vlc_restorecancel(i32 %11)
  %13 = load i32, i32* %4, align 4
  ret i32 %13
}

declare dso_local i32 @vlc_savecancel(...) #1

declare dso_local i64 @input_GetPcrSystem(i32*, i32*, i32*) #1

declare dso_local i32 @vlc_restorecancel(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
